--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> Hello Extensions </title>
+    <script type="text/javascript" src="jquery.min.js"></script>
   </head>
 
   <body>
