:sparkles: popup setting

--- a/hello.html
+++ b/hello.html
@@ -17,7 +17,7 @@
       </div>
       
       <label>
-        <input type="word" placeholder="찾으시는 단어를 입력하세요."/>
+        <input id="word" type="word" placeholder="찾으시는 단어를 입력하세요."/>
       </label>
 
       <div class="container wrapper">
