--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,6 @@
   <head>
     <title> Hello Extensions </title>
     <script type="text/javascript" src="jquery.min.js"></script>
-    <script type="text/javascript" src="./hello.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
 
@@ -17,7 +16,8 @@
       </div>
       
       <label>
-        <input type="word" placeholder="찾으시는 단어를 입력하세요."/>
+        <input id="search" type="word" placeholder="찾으시는 단어를 입력하세요."/>
+        <p id="result"></p>
       </label>
 
       <div class="container wrapper">
@@ -25,8 +25,8 @@
           <div class="card-w col-md-4">
             <div class="card inset">
               <div class="card__icon"></div>
-                <div class="card__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, iusto et. Omnis quam enim vitae, esse dolores hic reiciendis nobis eligendi commodi eaque sed maxime non dolorum incidunt laudantium facilis!
+                <div id="card__text" class="card__text">
+                  ㅎㅇ
                 </div>
             </div>
           </div>
@@ -35,4 +35,6 @@
       
     </div>
   </body>
+      <script type="text/javascript" src="./popup.js"></script>
+
 </html>
